--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "express": "^4.18.2",
     "glob": "^10.3.3",
     "lodash": "^4.17.21",
+    "mysql2": "^3.5.1",
     "node-cache": "^5.1.2",
-    "nodecache": "^0.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.32.1"
   }
 }
