--- a/package.json
+++ b/package.json
@@ -14,10 +14,13 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "glob": "^10.3.3",
+    "jsonwebtoken": "^9.0.1",
     "lodash": "^4.17.21",
     "mysql2": "^3.5.1",
     "node-cache": "^5.1.2",
     "nodemon": "^3.0.1",
+    "passport": "^0.6.0",
+    "passport-jwt": "^4.0.1",
     "sequelize": "^6.32.1"
   }
 }
