--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "seed": "node seeder.js"
   },
   "dependencies": {
+    "async": "^3.2.4",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "glob": "^10.3.3",
     "lodash": "^4.17.21",
+    "mysql2": "^3.6.0",
     "node-cache": "^5.1.2",
     "nodecache": "^0.0.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "sequelize": "^6.33.0"
   }
 }
